--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/Jasonyou1995/eth-contract#readme",
   "dependencies": {
+    "ethereumjs-tx": "^1.3.7",
+    "express": "^4.16.4",
     "ganache-cli": "^6.3.0-beta.0",
-    "truffle": "^5.0.7",
+    "truffle": "^5.0.8",
     "web3": "^1.0.0-beta.48"
   }
 }
